--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serenity = { version = "0.11", features = ["voice", "gateway", "rustls_backend", "client", "cache", "model"] }
+serenity = { version = "0.11", default-features = false, features = ["voice", "gateway", "rustls_backend", "client", "cache", "model"] }
 tokio = { version = "1.0", features = ["full"] }
 dotenv = "0.15"
 tokio-stream = "0.1"
 futures = "0.3"
 async-trait = "0.1"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-serenity = { version = "0.11", features = ["voice", "gateway", "rustls_backend", "client", "cache", "model"] }
-tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
